--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -9,7 +9,17 @@
     ] %}
 
     {{ form_start(form) }}
-    <div class="row">
+    {#
+    {% if courseInfo.course.parents|length == 1 %}
+        {% set parentInfo = courseInfo.course.parents[0].courseInfos[0] %}
+        <div class="row mt-3">
+            <div class="col">
+                <strong>{{ parentInfo.title }}</strong>
+            </div>
+        </div>
+    {% endif %}
+    #}
+    <div class="row mt-3">
         <div class="col">
             {{ form_row(form.period) }}
         </div>
@@ -61,9 +71,9 @@
                             </div>
                             <div class="row">
                                 <div class="col">
-                                {% if form.vars.data.image is not null %}
-                                    <img src="{{ asset('data/' ~ form.vars.data.image.filename) }}">
-                                {% endif %}
+                                    {% if form.vars.data.image is not null %}
+                                        <img src="{{ asset('data/' ~ form.vars.data.image.filename) }}">
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
