--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -130,7 +130,7 @@
             <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <div class="row d-flex flex-row">
-            <div class="col-md-12 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+            <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                 <h5 class="m-0">ACQUIS D'APPRENTISSAGE</h5>
             </div>
         </div>
@@ -141,14 +141,16 @@
         </div>
         <div class="row d-flex flex-row my-3">
             {% for achievement in course.courseAchievements %} 
-                <div class="col-md-6 border border-info bg-info text-light rounded d-flex flex-row justify-content-center align-items-center">
-                {{achievement.description}}
+                <div class="col-md-6 border border-info bg-info text-light rounded-pill d-flex flex-row justify-content-between align-items-center">
+                <img src="https://via.placeholder.com/25" class="img-fluid rounded-circle" alt="Responsive image">
+                <span class="my-2">{{achievement.description}} </span>
+                <div></div>
                 </div>
             {% endfor %} 
         </div>
         <div class="row d-flex flex-row justify-content-around">
-            <div class="col-md-5 m-1" >
-                <div class="col-md-12 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+            <div class="col-md-6" >
+                <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-0">PREREQUIS</h5>
                 </div>
                 <div class="row d-flex flex-row">
@@ -157,26 +159,28 @@
                     </div>
                 </div>
                 {% for prerequisite in course.coursePrerequisites %} 
-                    <div class="row m-3 border border-info bg-info text-light rounded d-flex flex-row justify-content-center align-items-center">
+                    <div class="row m-3 p-2 border border-info bg-info text-light rounded-pill d-flex flex-row justify-content-center align-items-center">
                     {{prerequisite.description}}
                     </div>
                 {% endfor %} 
             </div>
-            <div class="col-md-5 m-1" >
-                <div class="col-md-12 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+            <div class="col-md-6" >
+                <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-0">REMEDIATION / AIDE A LA REUSSITE</h5>
                 </div>
                 <div class="col-md-12 d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-2">Si je rencontre des difficultés, je peux...</h5>
                 </div>
-                    <div class="row m-3 border border-info bg-info text-light rounded d-flex flex-row justify-content-center align-items-center">
+                {% if course.tutoringDescription != null %}
+                    <div class="row m-3 p-2 border border-info bg-info text-light rounded-pill d-flex flex-row justify-content-center align-items-center">
                         {{course.tutoringDescription}}
                     </div>
-                {# {% for resource in course.courseTutoringResource %} 
-                    <div class="row m-3 border border-info bg-info text-light rounded d-flex flex-row justify-content-center align-items-center">
+                {% endif %}
+                {% for resource in course.courseTutoringResources %} 
+                    <div class="row m-3 p-2 border border-info bg-info text-light rounded-pill d-flex flex-row justify-content-center align-items-center">
                     {{resource.description}}
                     </div>
-                {% endfor %}  #}
+                {% endfor %} 
             </div>
         </div>
     </div>
