--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -12,19 +12,45 @@
 {% endblock %}
 
 {% block main %}
+{% set parent = course.course.parents[0] %}
+{% set year = '2018' %}
 
     <div class="container-fluid">
         <div class="row d-flex flex-row m-3">
             <div class="col-md-6">
                 <h3 class="text-justify text-left font-weight-bold">
                     {{course.title}}
-                    {{dump(course)}}
                 </h3>
             </div>
             <div class="col-md-6">
-                {{course.ects}}
-                {{course.level}}
-                {{course.semester}}
+                {# {% for parentInfo in parent %}
+                    {% for parentInfo in parent.courseInfos %}
+                    {% endfor %}
+                {% endfor %}  #}
+                <div class="row d-flex flex-row align-items-stretch ">
+                    {% if course.course.parents|length != 1 %}
+                    {% else %}
+                        <div class="col-md-6 d-flex flex-row border-left border-dark align-items-center">
+                            <span class="font-weight-bold">{{ parent.courseInfos[0].title }}</span>
+                        </div>
+                    <div class="col-md-3 border-left border-dark">
+                        <div class="row d-flex flex-row justify-content-center font-weight-bold"> 
+                            <h2 class="m-0">{{parent.courseInfos[0].ects}}</h2> 
+                        </div>
+                        <div class="row d-flex flex-row justify-content-center"> 
+                            ECTS 
+                        </div>
+                    </div>
+                    <div class="col-md-3 border-left border-dark ">
+                        <div class="row d-flex flex-row justify-content-center font-weight-bold">
+                            <h2 class="m-0">{{ parent.courseInfos[0].course.children|length }}</h2>
+                        </div>
+                        <div class="row d-flex flex-row justify-content-center"> 
+                            UCUE 
+                        </div>
+                    </div>
+                    {% endif %}
+                </div>
             </div>   
         </div>
         <div class="row d-flex flex-row m-3">
@@ -119,17 +145,17 @@
                 <span class="font-weight-bold media-body">Mobilité <br> internationale</span>
             </div>
         </div>
-        <div class="row d-flex flex-row">
-            <div class="col-md-6">
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-6 p-0">
                 <h3 class="text-justify text-left font-weight-bold">
                     Objectifs du cours
                 </h3>
             </div>
         </div>
-        <div class="progress my-3" style="height: 5px;">
+        <div class="progress mb-3" style="height: 5px;">
             <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
-        <div class="row d-flex flex-row">
+        <div class="row mx-3 d-flex flex-row">
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                 <h5 class="m-0">ACQUIS D'APPRENTISSAGE</h5>
             </div>
@@ -139,7 +165,7 @@
                 <h5 class="m-2">A la fin de ce cours, je serai capable de...</h5>
             </div>
         </div>
-        <div class="row d-flex flex-row my-3">
+        <div class="row mx-3 d-flex flex-row my-3">
             {% for achievement in course.courseAchievements %} 
                 <div class="col-md-6 border border-info bg-info text-light rounded-pill d-flex flex-row justify-content-between align-items-center">
                 <img src="https://via.placeholder.com/25" class="img-fluid rounded-circle" alt="Responsive image">
@@ -148,8 +174,8 @@
                 </div>
             {% endfor %} 
         </div>
-        <div class="row d-flex flex-row justify-content-around">
-            <div class="col-md-6" >
+        <div class="row mx-3 d-flex flex-row justify-content-around">
+            <div class="col-md-6 pl-0" >
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-0">PREREQUIS</h5>
                 </div>
@@ -164,7 +190,7 @@
                     </div>
                 {% endfor %} 
             </div>
-            <div class="col-md-6" >
+            <div class="col-md-6 pr-0" >
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-0">REMEDIATION / AIDE A LA REUSSITE</h5>
                 </div>
@@ -182,6 +208,16 @@
                     </div>
                 {% endfor %} 
             </div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-6 p-0">
+                <h3 class="text-justify text-left font-weight-bold">
+                    Contenu et activités
+                </h3>
+            </div>
+        </div>
+        <div class="progress mb-3" style="height: 5px;">
+            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
 
