student view sections

--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -15,6 +15,7 @@
 {% set parent = course.course.parents[0] %}
 {% set year = '2018' %}
 
+
     <div class="container-fluid">
         <div class="row d-flex flex-row m-3">
             <div class="col-md-6">
@@ -218,6 +219,101 @@
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold">
                     Contenu et activités
+                </h4>
+            </div>
+        </div>
+        <div class="progress mb-3" style="height: 5px;">
+            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+                <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-6 p-0">
+                <h4 class="text-justify text-left font-weight-bold">
+                    Modalités d'évaluation
+                </h4>
+            </div>
+        </div>
+        <div class="progress mb-3" style="height: 5px;">
+            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="row mx-3 d-flex flex-row justify-content-around">
+            <div class="col-md-6 pl-0" >
+                <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+                    <h5 class="m-0">MODALITE DE CONTROLE DES CONNAISSANCES</h5>
+                </div>
+            </div>
+            <div class="col-md-6 pr-0" >
+                <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+                    <h5 class="m-0">STRATEGIE D'EVALUATION</h5>
+                </div>
+                <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+                    <h5 class="m-0">CONSEILS PRATIQUES</h5>
+                </div>
+            </div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-6 p-0">
+                <h4 class="text-justify text-left font-weight-bold">
+                    Matériel et ressources
+                </h4>
+            </div>
+        </div>
+        <div class="progress mb-3" style="height: 5px;">
+            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+                <h5 class="m-0">MATERIEL OBLIGATOIRE</h5>
+            </div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+                <h5 class="m-0">RESSOUCRES PEDAGOGIQUES</h5>
+            </div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+                <h5 class="m-0">ELEMENTS BIBLIOGRAPHIQUES</h5>
+            </div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-6 p-0">
+                <h4 class="text-justify text-left font-weight-bold">
+                    Informations pratiques
+                </h4>
+            </div>
+        </div>
+        <div class="progress mb-3" style="height: 5px;">
+            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+                <h5 class="m-0">AGENDA / CALENDRIER</h5>
+            </div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+                <h5 class="m-0">ORGANISATION DU COURS</h5>
+            </div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-6 p-0">
+                <h4 class="text-justify text-left font-weight-bold">
+                    Réglementation
+                </h4>
+            </div>
+        </div>
+        <div class="progress mb-3" style="height: 5px;">
+            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="row d-flex flex-row">
+            <div class="col-md-12 d-flex flex-row justify-content-center align-items-center">
+                <h5 class="m-2">En m'inscrivant à l'université, je m'engage à respecter le règlement des études ci-après :</h5>
+            </div>
+        </div>
+        <div class="row mx-3 d-flex flex-row">
+            <div class="col-md-6 p-0">
+                <h4 class="text-justify text-left font-weight-bold">
+                    Mot de la fin
                 </h4>
             </div>
         </div>
